--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="active " href="index.html">Página Inicial</a></li>
-          <li><a href="index.html">Nossos Serviços</a></li>
+          <li><a href="index.html">Nossos Serviçoss</a></li>
           <li><a href="index.html">Sobre nós</a></li>
           <li><a href="index.html">Entre em Contato</a></li>
           
